--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     </head>
     <body>
         <h1>My Portfolio</h1>
-            <hr/>
         <h2>My First Website</h2>
-            <a href="../Best_Movies.html"><img src="./assets/images/movie_ranking.png" height="200"></a>
-             <hr/>
+            <a href="../Best_Movies.html" alt="The Best Movies">The Best Movies</a>
+                <hr/>
+            <img src="./assets/images/movie_ranking.png" height="200"/>
         <h2>My Second Website</h2>
-            <a href="../3.4 Birthday Invites.html"><img src="./assets/images/birthday_invite.png" height="200"></a>
+            <a href="../3.4 Birthday Invites.html" alt="Birthday Invites">Birthday Invites</a>
+                <hr/>
+            <img src="./assets/images/birthday_invite.png" height="200"/>
             <hr/>
         <a href="./public/about.html">About Me</a>
         <a href="./public/contact.html">Contact Me</a>
