--- a/public/contact.html
+++ b/public/contact.html
@@ -1,9 +1,10 @@
 <h1>Contact Me</h1>
-<p>Tel: +123456789</p>
-<p>Email: me@gmail.com</p>
+<p>Tel: 07399780447</p>
+<p>Email: markfromleven@gmail.com</p>
 <p>Address:</p>
 <p>
-  123 North Street<br />
-  Some City<br />
-  Some Country <br />
+  70 Dunlin Avenue<br />
+  Glenrothes<br />
+  Fife<br />
+  KY7 6TD<br/>
 </p>
